--- a/edi/pom.xml
+++ b/edi/pom.xml
@@ -16,9 +16,9 @@
     <modules>
         <module>edisax</module>
         <module>ect</module>
-        <module>ect/maven-ect-plugin</module>
+        <module>maven-ect-plugin</module>
         <module>ejc</module>
-        <module>ejc/maven-ejc-plugin</module>
+        <module>maven-ejc-plugin</module>
         <module>edi-test</module>
         <module>edi-utils</module>
     </modules>
